--- a/client/styles/part/ico.less
+++ b/client/styles/part/ico.less
@@ -36,6 +36,12 @@
     height: 19px;
   }
 
+  &.is-cross-red {
+    background: url(/client/img/ico_cross_red.png);
+    width: 20px;
+    height: 21px;
+  }
+
   &.is-man-green {
     background: url(/client/img/ico_man_green.png);
     width: 44px;
