--- a/client/styles/part/input.less
+++ b/client/styles/part/input.less
@@ -26,8 +26,8 @@
 
   .mark {
     position: absolute;
-    top: 12px;
-    right: -45px;
+    top: 15px;
+    right: 10px;
   }
 }
 
