--- a/client/styles/part/sections.less
+++ b/client/styles/part/sections.less
@@ -367,13 +367,6 @@
     margin-bottom: 10px;
   }
 
-  .title {
-    max-width: 315px;
-    margin: 0 auto 15px;
-    text-align: center;
-
-  }
-
   h2 {
     font-size: 30px;
     line-height: 1.2;
